# BasicCode-Compiler

./: .all-contributorsrc  .gitignore  CMakeLists.txt  README.md  README_DEV.md
examples/: Calculator.bac  fix.bac  funcTest.bac  loops.bac  test.bac  test_big.bac
include/: ast.h  codegen.h  error.h  lexer.h  parser.h  symboltable.h
src/: ast.cpp  codegen.cpp  error.cpp  lexer.l  main.cpp  parser.y  symboltable.cpp
